# todo-rs

./: Cargo.toml  README.md  db.sqlite  diesel.toml
migrations/2025-01-18-051650_create_todos_table/: up.sql
src/: handlers.rs  main.rs  models.rs
