[package]
name = "todo-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
axum-macros = "0.5.0"
diesel = { version = "2.2.6", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }


[profile.dev]
debug = true
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
